build.gradle.kts, FileTokenStore, TokenHolder, TokenManager, TokenStore: rewrite Token management